gitops/apps/authentik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    name: authentik
