gitops/apps/authentik/authentik-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: http   # listener name on the Gateway
  hostnames:
    - "authentik.vps.kubespaces.cloud"  # Change this to your actual domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-authentik
          port: 18789
